tic-tac-toe fixes - fix Cannot invoke "java.awt.Image.getSource()"